Update 3.0 Penetration Testing.md

--- a/3.0 Penetration Testing/3.0 Penetration Testing.md
+++ b/3.0 Penetration Testing/3.0 Penetration Testing.md
@@ -1,5 +1,5 @@
 
-# Virtual Lab Overview
+# 3.0 Penetration Testing.
 
 The virtual lab, as depicted in the uploaded network layout, demonstrates a segmented and isolated environment that mirrors real-world corporate IT infrastructures. It is built to enhance cybersecurity skills, incorporating zones like DMZ, Security Zone, and AD Zone to replicate layered defenses. Critical components include Active Directory servers, monitoring tools like Wazuh and Security Onion, and attack simulation nodes like Kali Linux.
 
