Update 4.0 Threat Detection and Response.md

--- a/4.0 Threat Detection and Response/4.0 Threat Detection and Response.md
+++ b/4.0 Threat Detection and Response/4.0 Threat Detection and Response.md
@@ -1,4 +1,4 @@
-# Threat Detection and Response Virtual Lab
+# 4.0 Threat Detection and Response
 
 ## Objective
 The objective of this lab is to demonstrate proficiency in identifying, analyzing, and mitigating cybersecurity threats within a simulated enterprise network environment. This setup replicates real-world network scenarios to improve hands-on knowledge of threat detection and response.
