--- a/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
+++ b/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
@@ -1,5 +1,5 @@
 
-# Network Security Architecture
+# 1.0 Network Security Architecture
 
 ## 1. Objective
 To design and implement a secure network architecture that simulates a real-world enterprise environment. The goal is to demonstrate the segmentation of networks into various zones, such as AD Zone, DMZ Zone, Guest Zone, Security Zone, and Isolated Zone, ensuring robust protection against internal and external threats.
