Update 6.0 System and Network Hardening.md

--- a/6.0 System and Network Hardening/6.0 System and Network Hardening.md
+++ b/6.0 System and Network Hardening/6.0 System and Network Hardening.md
@@ -1,4 +1,4 @@
-# 6.0 System and Network Hardening Lab
+# 6.0 System and Network Hardening
 
 ## Objective
 To demonstrate skills and knowledge in securing systems and networks by implementing hardening techniques. This involves reducing vulnerabilities, configuring security controls, and improving overall cybersecurity posture within a virtual lab environment.
