Update 7.0 File Storage Security.md

--- a/7.0 File Storage Security/7.0 File Storage Security.md
+++ b/7.0 File Storage Security/7.0 File Storage Security.md
@@ -34,32 +34,32 @@ To demonstrate the implementation of secure file storage practices in a networke
 - Create storage pools and datasets based on organizational needs.
 - Enable file sharing services (SMB, NFS) with secure configurations.
 
-### User Authentication:
+### 3. User Authentication:
 
 - Integrate TrueNAS with Active Directory for centralized user authentication.
 - Define user groups and set granular permissions for accessing specific datasets.
 
-### Data Security Measures:
+### 4. Data Security Measures:
 
 - Configure encryption for data at rest using TrueNAS features.
 - Enable SSL/TLS for data in transit during file access.
 
-### Monitoring and Logging:
+### 5. Monitoring and Logging:
 
 - Set up Wazuh to monitor file access logs from TrueNAS.
 - Create alerts for unauthorized access attempts or abnormal activity.
 
-### Penetration Testing and Threat Simulation:
+### 6. Penetration Testing and Threat Simulation:
 
 - Use Kali Linux to attempt unauthorized access to file storage.
 - Validate the effectiveness of security measures by analyzing logs and alerts in Wazuh and Security Onion.
 
-### Network Security:
+### 7. Network Security:
 
 - Use pfsense to create firewall rules restricting access to the file storage system.
 - Enable logging on pfsense to monitor traffic patterns to and from the storage system.
 
-### Documentation and Reporting:
+### 8. Documentation and Reporting:
 
 - Document all configurations, observed security events, and mitigation measures.
 - Prepare a report highlighting the security posture and recommendations for improvement.
