--- a/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
+++ b/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
@@ -1,17 +1,17 @@
 
 # 1.0 Network Security Architecture
 
-## Objective
+### Objective
 To design and implement a secure network architecture that simulates a real-world enterprise environment. The goal is to demonstrate the segmentation of networks into various zones, such as AD Zone, DMZ Zone, Guest Zone, Security Zone, and Isolated Zone, ensuring robust protection against internal and external threats.
 
-## Skills Learned
+### Skills Learned
 - Network segmentation and isolation for enhanced security.
 - Configuration and management of a firewall (pfSense) for inter-zone traffic control.
 - Implementation of intrusion detection and prevention systems (Security Onion).
 - Hardening of servers and endpoints within different zones.
 - Analysis of network traffic through a SPAN port for security monitoring.
 
-## Tools Used
+### Tools Used
 - pfSense: Firewall and network gateway.
 - Security Onion: Intrusion Detection System (IDS) and network monitoring.
 - Kali Linux: Penetration testing and vulnerability assessment.
@@ -22,7 +22,7 @@ To design and implement a secure network architecture that simulates a real-worl
 - Active Directory (AD): Centralized domain and user management.
 - Windows 10/11 Pro: Client systems for simulation.
 
-## Steps
+### Steps
 
 1. Setup and Configuration of pfSense Firewall
    - Configure pfSense with sub-interfaces for each network zone:
