Update 4.0 Threat Detection and Response.md

--- a/4.0 Threat Detection and Response/4.0 Threat Detection and Response.md
+++ b/4.0 Threat Detection and Response/4.0 Threat Detection and Response.md
@@ -1,16 +1,16 @@
 # 4.0 Threat Detection and Response
 
-## Objective
+### Objective
 The objective of this lab is to demonstrate proficiency in identifying, analyzing, and mitigating cybersecurity threats within a simulated enterprise network environment. This setup replicates real-world network scenarios to improve hands-on knowledge of threat detection and response.
 
-## Skills Learned
+### Skills Learned
 1. Implementing and configuring threat monitoring and detection tools.  
 2. Analyzing security alerts and logs for malicious activities.  
 3. Responding to identified threats through containment and remediation techniques.  
 4. Managing and monitoring network traffic across isolated zones and VLANs.  
 5. Securing endpoints and servers against potential vulnerabilities.  
 
-## Tools Used
+### Tools Used
 - Security Onion: For network traffic analysis and threat hunting.  
 - Wazuh: For log management and endpoint detection and response (EDR).  
 - Kali Linux: For vulnerability scanning and penetration testing.  
@@ -18,7 +18,7 @@ The objective of this lab is to demonstrate proficiency in identifying, analyzin
 - Wireshark: For deep packet inspection and network analysis.  
 - TrueNAS: For secure file storage and access control.  
 
-## Steps
+### Steps
 
 1. Network Layout Setup:  
    - Configured segmented zones: AD Zone, DMZ Zone, Security Zone, Guest Zone, and Isolated Zone using PFsense for VLAN management.  
