--- a/5.0 Digital Forensics/5.0 Digital Forensics.md
+++ b/5.0 Digital Forensics/5.0 Digital Forensics.md
@@ -1,16 +1,16 @@
 # 5.0 Digital Forensics 
 
-## Objective
+### Objective
 To simulate a real-world cybersecurity incident for demonstrating forensic investigation techniques, uncovering malicious activities, and preserving evidence in alignment with cybersecurity best practices.
 
-## Skills Learned
+### Skills Learned
 - Understanding the forensic investigation process, including data acquisition, analysis, and reporting.  
 - Identifying and preserving digital evidence from compromised systems.  
 - Analyzing log files, disk images, and network traffic for malicious activities.  
 - Employing tools to detect and trace the origin of security incidents.  
 - Documenting findings and reporting them systematically.  
 
-## Tools Used
+### Tools Used
 - Security Onion: For network monitoring and packet capture analysis.  
 - Wazuh: To monitor system logs and detect anomalies.  
 - Kali Linux: For forensic analysis and utilities like Autopsy, Sleuth Kit, and Volatility.  
@@ -19,7 +19,7 @@ To simulate a real-world cybersecurity incident for demonstrating forensic inves
 - pfsense: To simulate network traffic and isolate zones for investigation.  
 - REMux: For analyzing memory dumps and artifacts from compromised systems.  
 
-## Steps
+### Steps
 1. Incident Simulation: A mock attack was executed in the GUEST_ZONE, targeting the Windows 10 Pro machine. Suspicious behavior was logged by Wazuh.  
 2. Evidence Collection:  
    - Captured packet traffic using Security Onion.  
