Update 6.0 System and Network Hardening.md

--- a/6.0 System and Network Hardening/6.0 System and Network Hardening.md
+++ b/6.0 System and Network Hardening/6.0 System and Network Hardening.md
@@ -1,9 +1,9 @@
 # 6.0 System and Network Hardening
 
-## Objective
+### Objective
 To demonstrate skills and knowledge in securing systems and networks by implementing hardening techniques. This involves reducing vulnerabilities, configuring security controls, and improving overall cybersecurity posture within a virtual lab environment.
 
-## Skills Learned
+### Skills Learned
 1. System Hardening:
    - Applying security configurations to operating systems (Windows Server, Windows 10 Pro, and CentOS).
    - Disabling unnecessary services and ports.
@@ -20,7 +20,7 @@ To demonstrate skills and knowledge in securing systems and networks by implemen
 5. Secure Software Deployment:
    - Hardening web servers (IIS Server) and securing data storage systems (TrueNAS).
 
-## Tools Used
+### Tools Used
 - Network Infrastructure:
   - pfSense (Firewall and Network Segmentation)
   - REMux (Traffic analysis)
@@ -42,7 +42,7 @@ To demonstrate skills and knowledge in securing systems and networks by implemen
 - Other Servers:
   - IIS Server (Web Server)
 
-## Steps
+### Steps
 1. Network Configuration:
    - Designed a segmented network with zones (AD Zone, Security Zone, DMZ Zone, Isolated Zone).
    - Configured pfSense to manage network traffic and apply strict access controls.
