--- a/7.0 File Storage Security/7.0 File Storage Security.md
+++ b/7.0 File Storage Security/7.0 File Storage Security.md
@@ -1,10 +1,10 @@
 # 7.0 File Storage Security
 
-## Objective
+### Objective
 
 To demonstrate the implementation of secure file storage practices in a networked environment, ensuring data confidentiality, integrity, and availability while mitigating potential cybersecurity risks. This lab simulates real-world scenarios involving secure file access, monitoring, and threat detection.
 
-## Skills Learned
+### Skills Learned
 
 1. Configuring secure file storage using TrueNAS.
 2. Implementing access control mechanisms, including authentication and authorization.
@@ -13,7 +13,7 @@ To demonstrate the implementation of secure file storage practices in a networke
 5. Integrating file storage with Active Directory for user authentication.
 6. Identifying and mitigating common storage-related threats, such as unauthorized access and data leakage.
 
-## Tools Used
+### Tools Used
 1. TrueNAS: For setting up and managing the file storage system.
 2. Active Directory (AD): For user and group management and authentication.
 3. Wazuh: For monitoring file access and detecting security anomalies.
@@ -21,45 +21,45 @@ To demonstrate the implementation of secure file storage practices in a networke
 5. Security Onion: For analyzing network traffic related to storage access.
 6. pfsense: For configuring network segmentation and firewall rules to protect file storage zones.
 
-## Steps
+### Steps
 
-### 1. Lab Initialization:
+#### 1. Lab Initialization:
 
 - Configure the network layout as per the provided design, ensuring proper segmentation of zones (e.g., AD Zone, Security Zone, DMZ Zone, Isolated Zone).
 - Deploy TrueNAS in the Isolated Zone for secure file storage.
 
-### 2. Setting Up File Storage:
+#### 2. Setting Up File Storage:
 
 - Install and configure TrueNAS with appropriate RAID settings to ensure redundancy.
 - Create storage pools and datasets based on organizational needs.
 - Enable file sharing services (SMB, NFS) with secure configurations.
 
-### 3. User Authentication:
+#### 3. User Authentication:
 
 - Integrate TrueNAS with Active Directory for centralized user authentication.
 - Define user groups and set granular permissions for accessing specific datasets.
 
-### 4. Data Security Measures:
+#### 4. Data Security Measures:
 
 - Configure encryption for data at rest using TrueNAS features.
 - Enable SSL/TLS for data in transit during file access.
 
-### 5. Monitoring and Logging:
+#### 5. Monitoring and Logging:
 
 - Set up Wazuh to monitor file access logs from TrueNAS.
 - Create alerts for unauthorized access attempts or abnormal activity.
 
-### 6. Penetration Testing and Threat Simulation:
+#### 6. Penetration Testing and Threat Simulation:
 
 - Use Kali Linux to attempt unauthorized access to file storage.
 - Validate the effectiveness of security measures by analyzing logs and alerts in Wazuh and Security Onion.
 
-### 7. Network Security:
+#### 7. Network Security:
 
 - Use pfsense to create firewall rules restricting access to the file storage system.
 - Enable logging on pfsense to monitor traffic patterns to and from the storage system.
 
-### 8. Documentation and Reporting:
+#### 8. Documentation and Reporting:
 
 - Document all configurations, observed security events, and mitigation measures.
 - Prepare a report highlighting the security posture and recommendations for improvement.
