--- a/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
+++ b/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
@@ -15,28 +15,29 @@ To design and implement a secure network architecture that simulates a real-worl
 - **Security Onion**: Intrusion Detection System (IDS) and network monitoring.
 - **Kali Linux**: Penetration testing and vulnerability assessment.
 - **Wazuh**: Host-based security monitoring.
-- **IIS Server**: Web hosting in the DMZ Zone.
-- **TrueNAS**: Network-attached storage.
-- **REMux and Flare VM**: Malware analysis tools.
 - **Active Directory (AD)**: Centralized domain and user management.
-- **Windows 10/11 Pro**: Client systems for simulation.
 
 ## 4. Steps
 
 1. **Setup and Configuration of pfSense Firewall**
-   - Configure pfSense with sub-interfaces for each network zone:
-     - AD Zone: `10.10.10.0/24`
+   - Configure pfSense with sub-interfaces for each network zone and Define inter-zone traffic rules to restrict unauthorized access:
+     - AD Zone: `10.10.10.0/24` <br>
+       ![AD_Zone_Rules](https://github.com/user-attachments/assets/df4d2ca3-3034-4d64-988e-5c0e64075419)
      - Security Zone: `10.10.50.0/24`
-     - DMZ Zone: `10.10.99.0/24`
+       ![Security_Zone_Rules](https://github.com/user-attachments/assets/9a27befe-0cd4-41cd-a73e-8395fcc10620)
+     - DMZ Zone: `10.10.99.0/24'
+       ![DMZ_Zone_Rules](https://github.com/user-attachments/assets/df01a0bb-e32a-4417-94c1-1778b79c1618)
      - Guest Zone: `10.10.20.0/24`
+       ![Guest_Zone_Rules](https://github.com/user-attachments/assets/a4f8c68b-abc7-406a-834f-ecf9f88707bd)
      - Isolated Zone: `10.10.1.0/28`
-   - Define inter-zone traffic rules to restrict unauthorized access.
-
+       ![Isolate_Zone_Rules](https://github.com/user-attachments/assets/e601a40b-92b2-4974-9508-37a996e30549)
+  
 2. **Deploy and Configure Systems in Zones**
    - Place Windows AD Server and clients in the AD Zone.
    - Deploy Wazuh and Security Onion in the Security Zone for monitoring and logging AD_zones and DMZ_Zone traffic.
    - Host IIS Server, linux webserver and TrueNAS in the DMZ_Zone to simulate an internet-facing application.
    - Allow restricted access to the Guest Zone for external users.
+
 
 3. **Enable Traffic Monitoring and IDS**
    - Use Security Onion to monitor traffic from the SPAN port for threat detection.
@@ -49,3 +50,4 @@ To design and implement a secure network architecture that simulates a real-worl
 5. **Document and Analyze Results**
    - Review logs from Wazuh and Security Onion.
    - Generate a report summarizing network vulnerabilities, attack simulations, and mitigation strategies.
+
