--- a/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
+++ b/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
@@ -1,14 +1,14 @@
 # Network Security Architecture
 
 ## 1. Objective
-To design and implement a secure network architecture that simulates a real-world enterprise environment. The goal is to demonstrate the segmentation of networks into various zones, such as AD Zone, DMZ Zone, Guest Zone, Security Zone, and Isolated Zone, ensuring robust protection against internal and external threats.
+To design and implement a secure network architecture that simulates a real-world enterprise environment. This includes developing secure network topologies into various zones, such as AD Zone, DMZ Zone, Guest Zone, Security Zone, and Isolated Zone, enforcing access controls, implementing threat detection mechanisms, and ensuring compliance with industry security frameworks. By integrating firewalls, intrusion detection systems, VPNs, and zero-trust principles, the goal is to create resilient network defences against internal and external threats.
 
 ## 2. Skills Learned
 - Network segmentation and isolation for enhanced security.
 - Configuration and management of a firewall (pfSense) for inter-zone traffic control.
-- Implementation of intrusion detection and prevention systems.
+- Implementation of intrusion detection systems and log analyzer.
 - Hardening of servers and endpoints within AD_zones, DMZ_Zone and Isolated_Zone.
-- Analysis of network traffic through a SPAN port for security monitoring.
+- Analysis of network traffic with Suricata and Snort through a SPAN port for security monitoring.
 
 ## 3. Tools Used
 - **pfSense**: Firewall and network gateway.
