--- a/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
+++ b/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
@@ -34,13 +34,12 @@ To design and implement a secure network architecture that simulates a real-worl
   
 2. **Deploy and Configure Systems in Zones**
    - Place Windows AD Server and clients in the AD Zone.
-   - Deploy Wazuh and Security Onion in the Security Zone for monitoring and logging AD_zones and DMZ_Zone traffic.
+   - Deploy Wazuh and Elasticsearch in the Security Zone for monitoring and logging AD_Zone and DMZ_Zone traffic.
    - Host IIS Server, linux webserver and TrueNAS in the DMZ_Zone to simulate an internet-facing application.
    - Allow restricted access to the Guest Zone for external users.
 
-
 3. **Enable Traffic Monitoring and IDS**
-   - Use Security Onion to monitor traffic from the SPAN port for threat detection.
+   - Use Suricata/Snort to monitor traffic from the SPAN port for threat detection.
    - Configure alerts for anomalous traffic patterns.
 
 4. **Test Network Security**
