--- a/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
+++ b/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
@@ -12,7 +12,7 @@ To design and implement a secure network architecture that simulates a real-worl
 
 ## 3. Tools Used
 - **pfSense**: Firewall and network gateway.
-- **Security Onion**: Intrusion Detection System (IDS) and network monitoring.
+- **Ubuntu(Suricata/Snort)**: Intrusion Detection System (IDS) and network monitoring.
 - **Kali Linux**: Penetration testing and vulnerability assessment.
 - **Wazuh**: Host-based security monitoring.
 - **Active Directory (AD)**: Centralized domain and user management.
