--- a/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
+++ b/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
@@ -40,13 +40,19 @@ To design and implement a secure network architecture that simulates a real-worl
 
 3. **Enable Traffic Monitoring and IDS**
    - Use Suricata/Snort to monitor traffic from the SPAN port for threat detection.
+     - Suricata Logs
+     ![Suricata_logs](https://github.com/user-attachments/assets/3459d4d7-4e51-4705-a9fe-2d80bc6f48d1)
    - Configure alerts for anomalous traffic patterns.
 
 4. **Test Network Security**
    - Use Kali Linux to simulate attacks and test firewall rules and IDS effectiveness.
    - Perform vulnerability scans and document findings.
+      - DMZ assessment
+        [DMZ_Subnet.pdf](https://github.com/user-attachments/files/18837692/DMZ_Subnet.pdf)
 
 5. **Document and Analyze Results**
    - Review logs from Wazuh and Security Onion.
    - Generate a report summarizing network vulnerabilities, attack simulations, and mitigation strategies.
+
+
 
