--- a/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
+++ b/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
@@ -1,7 +1,7 @@
 # Network Security Architecture
 
 ## 1. Objective
-To design and implement a secure network architecture that simulates a real-world enterprise environment. This includes developing secure network topologies into various zones, such as AD Zone, DMZ Zone, Guest Zone, Security Zone, and Isolated Zone, enforcing access controls, implementing threat detection mechanisms, and ensuring compliance with industry security frameworks. By integrating firewalls, intrusion detection systems, VPNs, and zero-trust principles, the goal is to create resilient network defences against internal and external threats.
+To design and implement a secure network architecture that simulates a real-world enterprise environment. This includes developing secure network topologies into various zones, such as AD Zone, DMZ Zone, Guest Zone, Security Zone, and Isolated zone, enforcing access controls, implementing threat detection mechanisms, and ensuring compliance with industry security frameworks. By integrating firewalls, intrusion detection systems, VPNs, and zero-trust principles, the goal is to create resilient network defences against internal and external threats.
 
 ## 2. Skills Learned
 - Network segmentation and isolation for enhanced security.
@@ -47,12 +47,15 @@ To design and implement a secure network architecture that simulates a real-worl
 4. **Test Network Security**
    - Use Kali Linux to simulate attacks and test firewall rules and IDS effectiveness.
    - Perform vulnerability scans and document findings.
-      - DMZ assessment
+      - DMZ_Zone assessment
         [DMZ_Subnet.pdf](https://github.com/user-attachments/files/18837692/DMZ_Subnet.pdf)
+      - AD_Zone Assessment
+        [AD_Subnet.pdf](https://github.com/user-attachments/files/18923971/AD_Subnet.pdf)
 
 5. **Document and Analyze Results**
    - Review logs from Wazuh and Security Onion.
    - Generate a report summarizing network vulnerabilities, attack simulations, and mitigation strategies.
+
 
 
 
