--- a/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
+++ b/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
@@ -53,7 +53,7 @@ To design and implement a secure network architecture that simulates a real-worl
         [AD_Subnet.pdf](https://github.com/user-attachments/files/18923971/AD_Subnet.pdf)
 
 5. **Document and Analyze Results**
-   - Review logs from Wazuh and Security Onion.
+   - Review logs from Wazuh and ELK Server.
    - Generate a report summarizing network vulnerabilities, attack simulations, and mitigation strategies.
 
 
