--- a/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
+++ b/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
@@ -14,7 +14,7 @@ To design and implement a secure network architecture that simulates a real-worl
 - **pfSense**: Firewall and network gateway.
 - **Ubuntu(Suricata/Snort)**: Intrusion Detection System (IDS) and network monitoring.
 - **Kali Linux**: Penetration testing and vulnerability assessment.
-- **Wazuh**: Host-based security monitoring.
+- **Wazuh/Kali Purple-ELK**: Host-based security monitoring.
 - **Active Directory (AD)**: Centralized domain and user management.
 
 ## 4. Steps
