--- a/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
+++ b/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
@@ -12,10 +12,9 @@ To design and implement a secure network architecture that simulates a real-worl
 
 ## 3. Tools Used
 - **pfSense**: Firewall and network gateway.
+- **Wazuh/Kali Purple-ELK**: Host-based security monitoring.
 - **Ubuntu(Suricata/Snort)**: Intrusion Detection System (IDS) and network monitoring.
 - **Kali Linux**: Penetration testing and vulnerability assessment.
-- **Wazuh/Kali Purple-ELK**: Host-based security monitoring.
-- **Active Directory (AD)**: Centralized domain and user management.
 
 ## 4. Steps
 
@@ -39,14 +38,14 @@ To design and implement a secure network architecture that simulates a real-worl
    - Allow restricted access to the Guest Zone for external users.
 
 3. **Enable Traffic Monitoring and IDS**
-   - Use Suricata/Snort to monitor traffic from the SPAN port for threat detection.
+   - Use Suricata to monitor traffic from the SPAN port for threat detection.
      - Suricata Logs
      ![Suricata_logs](https://github.com/user-attachments/assets/3459d4d7-4e51-4705-a9fe-2d80bc6f48d1)
    - Configure alerts for anomalous traffic patterns.
 
 4. **Test Network Security**
    - Use Kali Linux to simulate attacks and test firewall rules and IDS effectiveness.
-   - Perform vulnerability scans and document findings.
+   - Perform vulnerability scans and document findings with OpneVAS Vulnerability scanner: - 
       - DMZ_Zone assessment
         [DMZ_Subnet.pdf](https://github.com/user-attachments/files/18837692/DMZ_Subnet.pdf)
       - AD_Zone Assessment
