--- a/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
+++ b/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
@@ -6,8 +6,7 @@ To design and implement a secure network architecture that simulates a real-worl
 ## 2. Skills Learned
 - Network segmentation and isolation for enhanced security.
 - Configuration and management of a firewall (pfSense) for inter-zone traffic control.
-- Implementation of intrusion detection systems and log analyzer.
-- Hardening of servers and endpoints within AD_zones, DMZ_Zone and Isolated_Zone.
+- Implementation of log collections to Wazuh and Kali Purple/ELK Server.
 - Analysis of network traffic with Suricata and Snort through a SPAN port for security monitoring.
 
 ## 3. Tools Used
@@ -17,7 +16,6 @@ To design and implement a secure network architecture that simulates a real-worl
 - **Kali Linux**: Penetration testing and vulnerability assessment.
 
 ## 4. Steps
-
 1. **Setup and Configuration of pfSense Firewall**
    - Configure pfSense with sub-interfaces for each network zone and Define inter-zone traffic rules to restrict unauthorized access:
      - AD Zone: `10.10.10.0/24` <br>
