Update 2.0 Active Directory Security.md

--- a/2.0 Active Directory Security/2.0 Active Directory Security.md
+++ b/2.0 Active Directory Security/2.0 Active Directory Security.md
@@ -13,8 +13,7 @@ To enhance the security of the Active Directory (AD) environment by implementing
 ### Tools Used  
 - **AD Server22**: Active Directory services for user and device management.  
 - **Wazuh**: Endpoint monitoring and log management.  
-- **Security Onion**: Network traffic analysis for detecting threats.   
-- **pfsense**: Network firewall and routing.  
+- **Kali Puple/ELK Server**: Network traffic analysis for detecting threats.   
 - **Windows 11/10 Pro**: Endpoints for testing user policies.
 
 ### Steps  
