--- a/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
+++ b/1.0 Network_Security_Architecture/1.0 Network_Security_Architecture.md
@@ -1,7 +1,7 @@
 # Network Security Architecture
 
 ## 1. Objective
-To design and implement a secure network architecture that simulates a real-world enterprise environment. This includes developing secure network topologies into various zones, such as AD Zone, DMZ Zone, Guest Zone, Security Zone, and Isolated zone, enforcing access controls, implementing threat detection mechanisms, and ensuring compliance with industry security frameworks. By integrating firewalls, intrusion detection systems, VPNs, and zero-trust principles, the goal is to create resilient network defences against internal and external threats.
+To design and implement a secure network architecture that simulates a real-world enterprise environment. This includes developing secure network topologies into various zones, such as AD Zone, DMZ Zone, Guest Zone, Security Zone, and Isolated zone, enforcing access controls, implementing threat detection mechanisms, and ensuring compliance with industry security frameworks. By integrating firewalls, and intrusion detection systems, the goal is to create resilient network defences against internal and external threats.
 
 ## 2. Skills Learned
 - Network segmentation and isolation for enhanced security.
@@ -31,8 +31,8 @@ To design and implement a secure network architecture that simulates a real-worl
   
 2. **Deploy and Configure Systems in Zones**
    - Place Windows AD Server and clients in the AD Zone.
-   - Deploy Wazuh and Elasticsearch in the Security Zone for monitoring and logging AD_Zone and DMZ_Zone traffic.
-   - Host IIS Server, linux webserver and TrueNAS in the DMZ_Zone to simulate an internet-facing application.
+   - Deploy Wazuh and Elasticsearch in the Security Zone for monitoring and logging AD_Zone and DMZ_Zone hosts.
+   - Host IIS Server, CentOS webserver and TrueNAS in the DMZ_Zone to simulate an internet-facing application.
    - Allow restricted access to the Guest Zone for external users.
 
 3. **Enable Traffic Monitoring and IDS**
