Update 2.0 Active Directory Security.md

--- a/2.0 Active Directory Security/2.0 Active Directory Security.md
+++ b/2.0 Active Directory Security/2.0 Active Directory Security.md
@@ -12,14 +12,14 @@ To enhance the security of the Active Directory (AD) environment by implementing
 
 ### Tools Used  
 - **AD Server22**: Active Directory services for user and device management.  
-- **Wazuh**: Endpoint monitoring and log management.  
-- **Kali Puple/ELK Server**: Network traffic analysis for detecting threats.   
+- **Wazuh and Kali Purple/ELK Server**: Endpoint monitoring and log management.  
+- **Ubuntu(Suricata/Snort)**: Network traffic analysis for detecting threats.   
 - **Windows 11/10 Pro**: Endpoints for testing user policies.
 
 ### Steps  
-1. Configure the AD server in the **AD Zone** using Server22 to manage domains and users.  
+1. Configure the AD server in the **AD Zone** to manage domains and users.  
 2. Set up Group Policies (e.g., password complexity, lockout policies) and link them to Organizational Units (OUs).  
-3. Use **Wazuh** to monitor AD logs for unusual activities such as failed login attempts or privilege escalations.  
-4. Analyze attack traffic using **Security Onion** to identify potential entry points.  
+3. Use **Wazuh and Kali Purple/ELK Server** to monitor AD logs for unusual activities such as failed login attempts or privilege escalations.  
+4. Analyze attack traffic using **Ubuntu(Suricata/Snort)** to identify potential entry points.  
 5. Harden security measures based on findings, such as restricting NTLM usage and enforcing LDAP signing.  
 6. Test the applied security policies by attempting unauthorized access from a compromised endpoint (e.g., Windows 10 Pro).
